# WireCutter2024-CH32V003-

./: CH32V003_WireCut.elf  CH32V003_WireCut.hex  CMakeLists.txt  LICENSE  README.md  bill_of_materials.csv
User/: ST7565R.c  ST7565R.h  ch32v00x_it.h  main.c  main.h  system_ch32v00x.c
